Fix invisible buttons

--- a/saleor/static/dashboard/scss/components/_buttons.scss
+++ b/saleor/static/dashboard/scss/components/_buttons.scss
@@ -2,6 +2,9 @@
   color: $secondary-color;
   &:hover {
     color: #fff;
+    &:not(.btn) {
+      color: $secondary-color;
+    }
   }
 }
 .btn {
